# sfida

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
dependencies/: CMakeLists.txt  README.md
include/sfida/: sfida.hpp
source/: func.cpp
tests/: CMakeLists.txt  func_test.cpp
